4/7/2014 - Added changelog reporting for the curious.
4/7/2014 - Added a help system.