@@ -1,0 +1,12 @@
+{
+    "code":"werewolves",
+    "level":5,
+    "mobs":[
+        "Rabbi Wolfstein",
+        "Orthodox Werewolf",
+        "Unorthodox Werewolf",
+        "Seven Well-Behaved Wolfpups, why not?",
+        "Murray"
+    ],
+    "name":"Werewolf Bar Mitzvah, Spooky Scary"
+}
